fix nav bar z-index

--- a/app/assets/stylesheets/materialize/components/_navbar.scss
+++ b/app/assets/stylesheets/materialize/components/_navbar.scss
@@ -217,7 +217,7 @@ nav.colorgy-nav{
     }
   }
   .nav-wrapper{
-    z-index: -1;
+    z-index: 1;
     height: auto;
     margin-top: -1px;
     padding-left: 20px;
